Fix grid alignment of subtitle

--- a/src/components/subtitle.scss
+++ b/src/components/subtitle.scss
@@ -1,7 +1,10 @@
 .cui__subtitle {
   @include typography(2.4rem, semi-bold);
-  @include vertical-grid(4rem, .2rem);
 
   color: map-get($colors, black);
+  height: 4rem;
+  line-height: 4rem;
+  margin: 0;
+  padding: .2rem 0 .8rem 0;
   text-transform: uppercase;
 }
